fluxcd/clusters/pi/home/external-dns/prox0/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prox0
  namespace: home
spec:
  type: ExternalName
  externalName: 192.168.86.4
  ports:
  - port: 8006
    targetPort: 8006
    protocol: TCP
