fluxcd/clusters/pi/home/external-dns/prox0/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prox0-ingress-route
  namespace: home
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prox0.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: prox0
          port: 8006
          scheme: https
          serversTransport: insecure-skip-verify
  tls:
    secretName: local-fellowfreak-dev-production-tls
